--- a/Styles.css/Contact.css
+++ b/Styles.css/Contact.css
@@ -1,5 +1,14 @@
-form {
-    padding-top: 25px;
+.navbar {
+    background-color: #caf0f8;
+}
+
+.logo {
+    cursor: pointer;
+    transition: all(0.3s);
+}
+
+.logo:hover {
+    transform: scale(1.1);
 }
 
 .form-label {
