--- a/Styles/About.css
+++ b/Styles/About.css
@@ -4,3 +4,14 @@ flex-direction: row;
 flex-wrap: wrap;
 justify-content: space-around;
 }
+.titulo-prin {
+    text-shadow:  3px 3px 1px rgba(0,0,0,0.2);
+
+}
+.card-title{
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content:center ;
+    font-size: 30px;
+    
+}
