--- a/Styles.css/NavFooter.css
+++ b/Styles.css/NavFooter.css
@@ -18,3 +18,35 @@
 .nav-link:hover {
     color: #fff;
 }
+
+.piepagina {
+    margin-top: 50px;
+}
+
+.iconos {
+    margin-top: 20px;
+}
+
+.icono-1 {
+    transition: all(0.2s);
+    padding: 0 15px 0 0;
+}
+.icono-1:hover {
+    transform: scale(0.9);
+}
+
+.icono-2 {
+    transition: all(0.2s);
+    padding: 0 15px 0 0;
+}
+.icono-2:hover {
+    transform: scale(0.9);
+}
+
+.icono-3 {
+    transition: all(0.2s);
+    padding: 0 0 0 15px;
+}
+.icono-3:hover {
+    transform: scale(0.9);
+}
